--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       background-color: #f9f9f9;
     }
     header {
-      background: url('https://raw.githubusercontent.com/Carmanzuba/Esencia-y-Ciencia-30/main/portada%204.png') no-repeat center center/cover;
+      background: url(https://github.com/Carmanzuba/Esencia-y-Ciencia-70/blob/main/portada_3.png?raw=true) no-repeat center center/cover;
       height: 300px;
       display: flex;
       align-items: flex-end;
