--- a/index.html
+++ b/index.html
@@ -12,13 +12,16 @@
       color: #2c2c2c;
       background-color: #f9f9f9;
     }
-    header {
-      background: url(https://github.com/Carmanzuba/Esencia-y-Ciencia-70/blob/main/portada_3.png?raw=true) no-repeat center center/cover;
-      height: 300px;
-      display: flex;
-      align-items: flex-end;
-      justify-content: center;
-    }
+   header {
+  background-image: url(https://github.com/Carmanzuba/Esencia-y-Ciencia-70/blob/main/portada_3.png?raw=true);
+  background-repeat: no-repeat;
+  background-position: center center;
+  background-size: 100% auto; /* Ajusta el ancho al 100% y la altura proporcionalmente */
+  height: 300px;
+  display: flex;
+  align-items: flex-end;
+  justify-content: center;
+}
     .boton-portada {
       margin-bottom: 20px;
       padding: 12px 25px;
